# ducky_chat

./: Cargo.toml  README.md
messages/: Cargo.toml
src/: duck.rs  lib.rs  main.rs  menu.rs  messages.rs
src/menu/: mod.rs
src/menu/color/: mod.rs
src/menu/help/: mod.rs
src/menu/mode/: mod.rs
src/menu/name/: mod.rs
src/menu/triggers/: mod.rs
src/messages/: mod.rs
