[package]
name = "ducky"
version = "0.1.0"
authors = ["corlesss <jazzchamp600@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
textwrap = "0.13.4"
# ctrlc = { version = "3.0", features = ["termination"] }
signal-hook = "0.3.8"
serde = { version = "1.0.125", features = ["derive"] }
confy = "0.3.1"
